Removed strings without key

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			var SHEET_ID = '1nfkV9jr4d2_Ub7kKDTzPC43Qb3KYo4tMCILCeKMDp3M';
 			var localizations;
 
-			SheetLocalizator(SHEET_ID, 'RU', function(data) {
+			SheetLocalizator(SHEET_ID, 'FI', function(data) {
 				localizations = data;
 				console.log(localizations);
 			});
